# sc_starter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  logo_raw
.cargo/: config.toml
.github/workflows/: Pre-build.yml  rust.yml  test.yml
res/: config.ini  config.toml  config.txt
src/: config.rs  file_ops.rs  hotkeys.rs  main.rs  msgbox.rs  tray.rs  types.rs  window_handle.rs
