[package]
name    = "SC_Starter"
version = "2.8.4"
# 记得更新 types.rs 中 res的版本
edition = "2021"
build   = "build.rs"

[profile.release]
strip         = true
lto           = true
panic         = "abort"
opt-level     = "z"
codegen-units = 1


[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.3"


[dependencies]
directories     = "6.0.0"
single-instance = "0.3.3"
windows-hotkeys = "0.2.1"
toml            = "0.9.8"
tray-icon       = "0.21.2"
tao             = "0.34.5"
mslnk           = "0.1.8"
