[package]
name    = "SC_Starter"
version = "2.10.3"
# 记得更新 types.rs 中 res的版本
edition = "2024"
build   = "build.rs"

[profile.release]
strip         = true
lto           = true
panic         = "abort"
opt-level     = "z"
codegen-units = 1


[build-dependencies]
vergen = { version = "9.1.0", features = ["build"] }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.6"


[dependencies]
win_msgbox_timeout = "1.2.1"
directories        = "6.0.0"
single-instance    = "0.3.3"
windows-hotkeys    = "0.2.1"
toml               = "1.1.2"
toml_edit          = "0.25.11"
tray-icon          = "0.24.0"
tao                = "0.35.2"
mslnk              = "0.1.8"
